removed double-tap-to-zoom to prevent accidental zooming when tapping +/- buttons fast on mobile

--- a/assets/scss/item_details.scss
+++ b/assets/scss/item_details.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap4-tagsinput/tagsinput";
+@import "main";
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -8,4 +9,8 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
+}
+
+.disable-tap-zoom {
+  touch-action: manipulation;
 }
